--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -202,14 +202,14 @@ nav {
 }
 
 .best_article_1 {
-    background-image: url(../img/best_article_1.jpg);
+    background-image: url(../img/article_8.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
 }
 
 .best_article_2 {
-    background-image: url(../img/best_article_2.jpg);
+    background-image: url(../img/article_12.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
