--- a/better_site/article_detail/templates/article_detail/test.html
+++ b/better_site/article_detail/templates/article_detail/test.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-dsfdsgsgs
-</body>
-</html>
+
+{% extends 'main/layout.html' %}
+
+{% block title %}Home{% endblock %}
+
+
+{% block content %}
+
+{{article.title}}
+{{article.content}}
+
+
+
+{% endblock %}
