--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -39,21 +39,21 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="debit" class="nav_link">
+                        <a href="{% url 'debit' %}" class="nav_link">
                             <i class="fa-solid fa-credit-card nav_icon"></i>
                             <span class="nav_name">Кэшбэк</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
-                        <a href="credit" class="nav_link">
+                        <a href="{% url 'credit' %}" class="nav_link">
                             <i class="fa-solid fa-hand-holding-dollar nav_icon"></i>
                             <span class="nav_name">Кредитки</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
-                        <a href="savings" class="nav_link">
+                        <a href="{% url 'savings' %}" class="nav_link">
                             <i class="fa-solid fa-piggy-bank nav_icon"></i>
 <!--                            <i class="fa-solid fa-vault nav_icon"></i>-->
                             <span class="nav_name">Копилка</span>
