--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -27,12 +27,12 @@
 <body>
     <header class="header" id="header">
         <nav class="nav_container">
-            <a href="#" class="nav_logo">Money<p>Makers</p></a>
+            <a href="{% url 'home' %}" class="nav_logo">Money<p>Makers</p></a>
 
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="home" class="nav_link">
+                        <a href="{% url 'home' %}" class="nav_link">
                              <i class="fa-solid fa-house nav_icon"></i>
                             <span class="nav_name">Главная</span>
                         </a>
