--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -910,7 +910,7 @@ nav {
 }
 
 .detail_title {
-    margin: 0 0 5% 0;
+    margin: 0 2% 5% 2%;
     padding: 3% 1.5%;
     font-size: 2.1rem;
     background-color: rgba(255, 255, 255, 0.5);
