--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -563,6 +563,14 @@ nav {
     display: flex;
     align-items: end;
     justify-content: center;
+    transition: .3s;
+}
+
+.credit ul li:hover {
+    transform: scale(1.1);
+}
+.credit ul li:first-child:hover {
+    transform: none;
 }
 
 .credit .credit_stat {
