--- a/better_site/article_detail/templates/article_detail/article_detail.html
+++ b/better_site/article_detail/templates/article_detail/article_detail.html
@@ -6,8 +6,10 @@
 
 {% block content %}
     <div class="detail_card" style="background-image: url('{{article.photo.url}}');">
-        <p class="detail_title">{{article.title}}</p>
+<!--        <p class="detail_title">{{article.title}}</p>-->
     </div>
+
+    <div class="div_title_detail"><p>{{article.title}}</p></div>
 
     <div class="article_info">
             <p>
