--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -917,6 +917,7 @@ nav {
     border-radius: 30px;
 }
 
+/*Текст на карточке*/
 .detail_title {
     margin: 0 2% 5% 2%;
     padding: 3% 1.5%;
@@ -929,16 +930,16 @@ nav {
 .article_info {
     width: 80vw;
     height: 20%;
-    margin: 2vh 0;
+    margin: 0;
     font-size: 1rem;
-    padding: 1%;
+    padding: 0 1%;
 /*    background-color: #d72828;*/
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     line-height: 1.5rem;
     row-gap: 3vh;
     column-gap: 2vh;
-    border-bottom: 2px solid #ff007d;
+/*    border-bottom: 2px solid #ff007d;*/
 }
 
 .article_info p {
@@ -978,6 +979,27 @@ nav {
 .article_content p:first-child {
     margin-top: 0;
 }
+
+
+.div_title_detail {
+    margin: 2vh 0;
+    padding: 0 0 2vh 0;
+    width: 80vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 2px solid #ff007d;
+}
+
+.div_title_detail p {
+    font-size: 2rem;
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 
 /* for medium devices */
 @media screen and (min-width: 576px) {
