--- a/better_site/main/templates/main/credit.html
+++ b/better_site/main/templates/main/credit.html
@@ -18,7 +18,7 @@
                                         <p class="title">{{post.title}}</p>
                                         <p class="time time_create"><i class="fa-regular fa-calendar"></i>&nbsp;&nbsp;{{post.time_create}}</p>
                                         <p class="time time_update">Обновлено&nbsp;&nbsp;{{post.time_update}}</p>
-                                        <p class="contents">{{post.content | truncatechars:200 }}</p>
+                                        <p class="contents">{{post.content | truncatechars:220 | safe}}</p>
                                     </div>
                                 </div>
                             </a>
