--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -955,7 +955,7 @@ nav {
 
 
 .article_content {
-    width: 80vw;
+    width: 70vw;
     margin: 2vh 0 0 0;
     padding: 0;
     display: flex;
@@ -978,6 +978,10 @@ nav {
     margin-top: 0;
 }
 
+.article_content h3 {
+    font-size: 1.6rem;
+    color: #ff007d;
+}
 
 .div_title_detail {
     margin: 2vh 0;
@@ -991,7 +995,7 @@ nav {
 
 .div_title_detail p {
     font-size: 2rem;
-    text-align: left;
+    text-align: center;
     width: 100%;
     height: 100%;
     padding: 0;
