--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -904,7 +904,7 @@ nav {
 .detail_card {
     margin: 12vh 0 0 0;
     padding: 0;
-    height: 50vh;
+    height: 65vh;
     width: 80vw;
     background-repeat: no-repeat;
     background-size: cover;
@@ -942,7 +942,7 @@ nav {
 
 .article_info p {
 /*    background-color: #ff007d;*/
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.4);
 /*    backdrop-filter: blur(17px);*/
 /*    border-radius: 30px;*/
     height: 100%;
@@ -967,7 +967,7 @@ nav {
 
 .article_content p {
 /*    background-color: red;*/
-    text-align: left;
+    text-align: justify;
     font-size: 1.2rem;
     line-height: 1.8rem;
     width: 100%;
@@ -981,6 +981,12 @@ nav {
 .article_content h3 {
     font-size: 1.6rem;
     color: #ff007d;
+}
+
+.article_content ul {
+    margin: 0;
+    padding: 0;
+
 }
 
 .div_title_detail {
