--- a/better_site/accounts/templates/accounts/sign_up.html
+++ b/better_site/accounts/templates/accounts/sign_up.html
@@ -7,7 +7,19 @@
 {% block content %}
     <form class="site_form" action="/account/signup/" method="post">
         {% csrf_token %}
-        {{form}}
+
+        {{form.username.label}}
+        {{form.username}}
+
+        {{form.email.label}}
+        {{form.email}}
+
+        {{form.password1.label}}
+        {{form.password1}}
+
+        {{form.password2.label}}
+        {{form.password2}}
+
         <input type="submit" value="Signup">
     </form>
 
