--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -1010,6 +1010,163 @@ nav {
 }
 
 
+.form_wrapper {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+}
+
+
+.site_form {
+    background-color: rgba(255,255,255, 0.8);
+    width: 30vw;
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    border-radius: 20px;
+    box-shadow: 10px 10px 15px #ff007d;
+}
+
+.register_label {
+/*    background-color: red;*/
+    margin: 5% 0 0 0;
+    padding: 0;
+    font-size: 1.8rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: #ff007d;
+}
+
+/*.register_label::before {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    left: 5%;*/
+/*    bottom: 0;*/
+/*    height: 3px;*/
+/*    width: 40px;*/
+/*    background-color: #ff007d;*/
+/*    border-radius: 20px;*/
+/*}*/
+
+.form {
+/*    background-color: greenyellow;*/
+    width: 100%;
+    height: 85%;
+    margin: 0;
+    padding: 3% 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.input {
+/*    background-color: yellow;*/
+    margin: 2vh 0;
+    padding: 0;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+/*    border-bottom: 2px solid rgba(0,0,0,0.55);*/
+}
+
+
+.field {
+    height: 100%;
+    width: 100%;
+/*    background-color: blueviolet;*/
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+input {
+    width: 85%;
+    height: 6vh;
+    border-color: transparent;
+    border-bottom: 2px solid rgba(0,0,0,0.55);
+    background-color: transparent;
+}
+
+form input:focus {
+    outline: none;
+    border-bottom-color:  #ff007d;
+/*    box-shadow: inset 0px 0px 2px 2px #ff007d;*/
+}
+
+.input i {
+    margin: 0;
+    padding: 0 5% 0 3%;
+    height: 100%;
+/*    background-color: #008071;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    color: #ff007da6;
+}
+
+.confirm {
+    background-color: #ff007d;
+    color: white;
+    margin: 2vh 0;
+    padding: 0;
+    width: 90%;
+    height: 6vh;
+    border-radius: 10px;
+    transition: .3s;
+    border-bottom: transparent;
+}
+
+.confirm:hover {
+    background-color: #fcd8e2;
+    color: #ff007d;
+    border: 2px solid #ff007d;
+}
+
+.to_login {
+/*    background-color: hotpink;*/
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.to_login p {
+/*    background-color: khaki;*/
+    width: 100;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.to_login a {
+    width: 100;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    color: #ff007d;
+    text-decoration: none;
+}
+
+
+
 /* for medium devices */
 @media screen and (min-width: 576px) {
 
