login page + backend, errors showing

--- a/better_site/article_detail/templates/article_detail/article_detail.html
+++ b/better_site/article_detail/templates/article_detail/article_detail.html
@@ -34,6 +34,9 @@
         {{article.content | safe}}
     </div>
 
+    <div class="login_button">
+        <a href="{% url 'login' %}">Войти, чтобы оставить комментарий</a>
+    </div>
 
 <!--<i class="fa-regular fa-comment"></i> comment-->
 <!--<i class="fa-regular fa-thumbs-up"></i>-->
