--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -19,7 +19,7 @@
     --z-fixed: 100;
 
 
-    --shadow-color-darker: rgba(128, 128, 128, 0.1);
+    --shadow-color-darker:  rgba(128, 128, 128, 0.1);
     --shadow-color-medium: rgba(128, 128, 128, 0.05);
     --shadow-color: rgba(128, 128, 128, 0.02);
     --blur-radius: 0px;
@@ -1023,7 +1023,7 @@ nav {
 .site_form {
     background-color: rgba(255,255,255, 0.8);
     width: 30vw;
-    height: 70vh;
+    height: 75vh;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -1031,7 +1031,7 @@ nav {
     margin: 0;
     padding: 0;
     border-radius: 20px;
-    box-shadow: 10px 10px 15px #ff007d;
+    box-shadow: 10px 10px 15px #ff007d9e;
 }
 
 .register_label {
@@ -1095,7 +1095,7 @@ input {
     width: 85%;
     height: 6vh;
     border-color: transparent;
-    border-bottom: 2px solid rgba(0,0,0,0.55);
+    border-bottom: 1px solid rgba(0,0,0, 0.3);
     background-color: transparent;
 }
 
@@ -1136,13 +1136,13 @@ form input:focus {
 }
 
 .to_login {
-/*    background-color: hotpink;*/
     width: 100%;
-    margin: 0;
+    margin: 2vh 0 0 0;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: rgba(0,0,0, 0.5)
 }
 
 .to_login p {
@@ -1165,6 +1165,45 @@ form input:focus {
     text-decoration: none;
 }
 
+
+.site_form_login{
+    width: 30vw;
+    height: 50vh;
+}
+
+
+.login_button {
+    margin: 3vh 0 3vh 0;
+}
+
+.login_button a {
+    text-decoration: none;
+    text-align: center;
+    background-color: #ff007d;
+    color: white;
+    height: 80%;
+    display: flex;
+    padding: 2%;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    border-radius: 40px;
+    transition: .3s;
+}
+.login_button a:hover {
+    background-color: #fcd8e2;
+    color: #ff007d;
+    box-shadow: inset 0px 0px 0px 2px #ff007d;
+}
+
+.error_message {
+    width: 90%;
+    padding: 0;
+    margin: 0;
+    color: red;
+    text-align: center;
+}
 
 
 /* for medium devices */
