--- a/better_site/article_detail/templates/article_detail/article_detail.html
+++ b/better_site/article_detail/templates/article_detail/article_detail.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="login_button">
-        <a href="{% url 'login' %}">Войти, чтобы оставить комментарий</a>
+        <a href="{% url 'login' category=category id=id %}">Войти, чтобы оставить комментарий</a>
     </div>
 
 <!--<i class="fa-regular fa-comment"></i> comment-->
