--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="foot-bottom">
-            <p>&copy; 2024 developed by Roma lbj, designed by&nbsp;<a href="https://www.instagram.com/2benumber1">@2benumber1</a></p>
+            <p>&copy; 2024 developed by Roma lbj, designed by&nbsp;<a href="https://www.instagram.com/2benumber1" class="lexa_inst">@2benumber1</a></p>
         </div>
     </div>
 
