date output change

--- a/better_site/article_detail/templates/article_detail/article_detail.html
+++ b/better_site/article_detail/templates/article_detail/article_detail.html
@@ -14,11 +14,11 @@
     <div class="article_info">
             <p>
                 <span><i class="fa-regular fa-calendar"></i>&nbsp;Опубликовано </span>
-                <span>{{article.time_create}}</span>
+                <span>{{article.time_create|date}}</span>
             </p>
             <p>
                 <span><i class="fa-regular fa-calendar"></i>&nbsp;Обновлено</span>
-                <span>{{article.time_update}}</span>
+                <span>{{article.time_update|date}}</span>
             </p>
             <p>
                 <span><i class="fa-regular fa-comment"></i>&nbsp;Комментариев </span>
