--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -1219,7 +1219,7 @@ form input:focus {
     border-top: 1px solid #ff007d;
 /*    background-color: #ffe19c;*/
     margin: 3vh 0;
-    padding: 3vh;
+    padding: 2vh 0;
     width: 70vw;
     display: flex;
     justify-content: center;
@@ -1263,17 +1263,52 @@ form input:focus {
 
 .comment:hover span:last-child{
     font-weight: 600;
+    letter-spacing: 0.1rem;
 }
 
 .comment:hover span:first-child{
     font-weight: 600;
+    letter-spacing: 0.1rem;
 }
 
+.comments_label {
+/*    background-color: red;*/
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70vw;
+    margin: 0 0 2vh 0;
+}
 
+.comments_label p {
+/*    background-color: blueviolet;*/
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 2rem;
+}
 
+.no_comments {
+/*    background-color: red;*/
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
 
-
-
+.no_comments p {
+/*    background-color: greenyellow;*/
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-size: 1.2rem;
+}
 
 
 /* for medium devices */
