--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -1197,7 +1197,7 @@ form input:focus {
     align-items: center;
     justify-content: center;
     font-size: 1.2rem;
-    border-radius: 40px;
+    border-radius: 20px;
     transition: .3s;
 }
 .login_button a:hover {
@@ -1291,6 +1291,11 @@ form input:focus {
     font-size: 2rem;
 }
 
+.comments_label p span {
+    color: #ff007d;
+    font-size: 1.65rem;
+}
+
 .no_comments {
 /*    background-color: red;*/
     width: 100%;
@@ -1337,6 +1342,31 @@ form input:focus {
     flex-direction: column;
 }
 
+.comment_window {
+/*    background-color: red;*/
+    position: relative;
+    z-index: 100;
+}
+
+.place_holder {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+/*    background-color: greenyellow;*/
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    color: rgba(0,0,0, 0.15);
+    z-index: -100;
+    transition: .2s;
+}
+
 textarea {
     margin: 0;
     padding: 1vw 2vw;
@@ -1349,6 +1379,24 @@ textarea {
 textarea:focus {
     outline: none;
     border-color:  #ff007d;
+}
+
+textarea:focus ~ .place_holder {
+    opacity: 0;
+}
+
+.comment_window span {
+    transition: .3s;
+}
+
+.comment_window:hover span:first-child {
+    opacity: 0;
+    transform: translateX(-100px);
+}
+
+.comment_window:hover span:last-child {
+    opacity: 0;
+    transform: translateX(100px);
 }
 
 .confirm_comment {
