--- a/better_site/article_detail/templates/article_detail/article_detail.html
+++ b/better_site/article_detail/templates/article_detail/article_detail.html
@@ -26,7 +26,7 @@
             </p>
             <p>
                 <span><i class="fa-regular fa-heart"></i>&nbsp;Лайков</span>
-                <span>{{article.likes_amount}}</span>
+                <span>{{total_likes}}</span>
             </p>
     </div>
 
@@ -35,6 +35,19 @@
     </div>
 
     <div class="comments_container">
+
+        <div class="like-button">
+
+            <form action="{% url 'like_article' category id %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" name="article_id" value="{{id}}" class="btn btn-primary btn-sm">
+                Нравится</button>
+            </form>
+
+        {{total_likes}}
+
+        </div>
+
         <div class="comments_label">
             <p>комментарии <span>{{article.comments.all.count}}</span></p>
         </div>
@@ -86,5 +99,9 @@
 <!--<i class="fa-regular fa-comment"></i> comment-->
 <!--<i class="fa-regular fa-thumbs-up"></i>-->
 <!--<i class="fa-regular fa-heart"></i> like-->
+
+
+
+<!--{{user}}-->
 
 {% endblock %}
