--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -1419,6 +1419,63 @@ textarea:focus ~ .place_holder {
     margin-bottom: 10vh;
 }
 
+.like-button {
+/*    background-color: red;*/
+    width: 200px;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 0;
+    padding: 0;
+}
+
+.heart-bg {
+    height: 100px;
+    width: 100px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+/*    background-color: greenyellow;*/
+
+}
+
+.heart-bg form {
+    width: 100%;
+    height: 100%;
+}
+
+.heart-icon {
+    margin: 0;
+    padding: 0;
+    height: 100px;
+    width: 100px;
+    background: url("../img/heart.png");
+    background-position: left;
+    cursor: pointer;
+    border: transparent;
+}
+
+.likes-amount {
+    margin: 0;
+    padding: 0;
+    font-size: 1.5rem;
+/*    background-color: blueviolet;*/
+}
+
+.like-button .heart-icon:hover {
+  animation: like-anim 0.7s steps(28) forwards;
+}
+
+@keyframes like-anim {
+  to {
+    background-position: right;
+  }
+}
+
+
 
 /* for medium devices */
 @media screen and (min-width: 576px) {
